fixed sticky sub-banner

--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -478,6 +478,7 @@ body .container .mainRow .rightColumn .experience .job ul li::before {
   background-color: #000;
   color: #fff;
   z-index: 10;
+  margin-top: -2px;
 }
 
 .sticky a {
