--- a/stylesheets/resume.scss
+++ b/stylesheets/resume.scss
@@ -217,6 +217,7 @@ body{
       font-size: 20px;
       margin-top: 0%;
       letter-spacing: 20px;
+
     }
   }
 		header{
@@ -247,6 +248,11 @@ body{
 	        display: inline-flex;
 	        font-size: 20px;
 	        color: $mainColor;
+					span{
+						font-family: $subFont;
+						font-size: 14px;
+						line-height: 27px;
+					}
 	        &:hover {
 	          color: $blue;
 	          i{
