Adding tekvideo and react pathways

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1648,7 +1648,7 @@ padding: 200px 0;
 	font-size: 24px;
 	padding: 50px 50px 50px 50px;
 	width: 800px;
-	color: #000;
+	color: #f91791;
 	text-align: center;
 }
 #testimonials .testimonial .client-info {
