adding responsiveness to new skills area

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3067,8 +3067,8 @@ body>nav.hide-it {
 } */
 
 #about .title li {
-    font-size: 16px;
-    /* margin: 0 10px; */
+    font-size: 15px;
+    margin: 0 10px;
 }
 #bio > p {
 
