--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1362,11 +1362,11 @@ padding: 200px 0;
 } */
 .me svg{
 
-	width: 150px;
+	width: 125px;
 	height: auto;
 }
 .me h3{
-	font-size: 25px;
+	font-size: 20px;
 	margin: 10px 0;
 	/* font-family: "Audrey-Normal", monospace; */
 }
@@ -2934,14 +2934,15 @@ body>nav.hide-it {
     color: #f91791;
     padding-top: 10px;
 }
+		.skills .row{
+			/* margin-top: -50px;
+			margin-bottom: 75px; */
+		}
 
 		.skills li{
 			width: 49%;
 		}
-
-
 		.skillsGrid li h4 {
-
     margin-top: -3px;
     font-size: 16px;
 
