--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1362,12 +1362,12 @@ padding: 200px 0;
 } */
 .me svg{
 
-	width: 125px;
+	width: 100%;
 	height: auto;
 }
 .me h3{
 	font-size: 20px;
-	margin: 10px 0;
+	margin: 15px 0;
 	/* font-family: "Audrey-Normal", monospace; */
 }
 
