Adding me animation

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -10,7 +10,50 @@ $blue: #95C6C4;
 $mainColor: #070707;
 $gray: #8c8c8c;
 $pink: #f91791;
-// 
+
+// @import "bourbon";
+
+
+@keyframes bang {
+  from {
+    transform: translate3d(0,0,0);
+    opacity: 1;
+  }
+}
+.optimism {
+  // width: 240px;
+  // margin:150px auto 0;
+  text-align: center;
+  // padding: 10px 0;
+  cursor: pointer;
+  position: relative;
+  // span {
+  //   color: #333;
+  //   font-size: .9em;
+  // }
+  i {
+    position: absolute;
+    display: block;
+    left: 50%;
+    top: 0;
+    margin-bottom: 50px;
+    width: 3px;
+    height: 5px;
+    background: red;
+    opacity: 0;
+  }
+  &:hover {
+    @for $i from 1 through 50 {
+      i:nth-of-type(#{$i}) {
+        transform: translate3d(random(190) - 100 + px,random(50) - 100 + px,0) rotate(random(360) + deg);
+        background: hsla(random(360),100%,50%,1);
+        animation: bang 700ms ease-out forwards infinite;
+        opacity: 0;
+      }
+    }
+  }
+}
+//
 // #about{
 // 	float: left;
 // 	width: 100%;
